kubernetes/jaeger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: otel
spec:
  ingressClassName: traefik
  rules:
  - host: k3sotel.local
    http:
      paths:
      - backend:
          service:
            name: jaaeger-jaeger-ui
            port:
              number: 16686
        path: /jaeger
        pathType: Prefix
